--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animejs": "^3.2.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "core-js": "^3.24.0",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-collapsible": "^2.10.0",
