--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.24.0",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-collapse": "^5.1.1",
     "react-collapsible": "^2.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
